<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuShowVideoList"
        android:enabled="true"
        app:showAsAction="never"
      
        android:title="@string/menu_select_link"/>
   
    <item
    android:id="@+id/menuReload"
        app:showAsAction="never"
    android:title="@string/menu_reload"/>

    <item
        android:id="@+id/menuHistory"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/menu_history"/>

    <item
        android:id="@+id/menuBookmark"
        android:title="@string/menu_bookmark"
        app:showAsAction="never"
        android:enabled="true"/>
    <item
        android:id="@+id/menuMyBookmark"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/menu_mybookmark"/>
    <item
        android:id="@+id/menuQuickAccess"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/menu_addquickaccess"/>
    <item
        android:id="@+id/menuClearHistory"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/menu_clearhistory"/>
    <item
        android:id="@+id/menuClearOnExit"
        android:enabled="true"
        app:showAsAction="never"
        android:checkable="true"
        android:title="@string/menu_clearonexit"/>

    <item
        android:id="@+id/menuBlockAds"
        android:enabled="true"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/menu_blockads"/>

    <item
        android:id="@+id/menuSwitchUA"
        app:showAsAction="never"
        android:checkableBehavior="single"
        android:title="@string/menu_switchuseragent">
        <menu>
        <item
            android:id="@+id/menuUAMobile"
            android:title="@string/menu_chromemobile">
        </item>
        <item
            android:id="@+id/menuApple"
            android:title="@string/menu_safari">
        </item>
        <item
            android:id="@+id/menuFirefox"
            android:title="@string/menu_firefox">
        </item>
        </menu>
        </item>
    <item
        android:id="@+id/menuHelp"
        android:enabled="false"
        app:showAsAction="never"
        android:title="@string/help">
    </item>

    <item
        app:showAsAction="never"
        android:id="@+id/menuClearCookie"
        android:enabled="true"
        android:title="@string/menu_clearcookie"></item>
</menu>