<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vaibhav.tech.smartiptv.IptvActivity"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iptv_address"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:inputType="text"
        android:lines="1"
        android:textSize="14sp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:hint="@string/iptv_address_hint"
        android:background="@android:color/white"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iptv_address_or"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/choosefile"
        android:background="@color/iptvbuttonfile"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/iptv_choosefile"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/iptvName"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:hint="@string/iptv_name"
        android:background="@android:color/white"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/iptvAdd"
        android:background="@color/iptvbuttonfile"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/iptv_add"
        android:layout_height="40dp" />

</LinearLayout>
